--- a/app/src/main/res/layout/layout_albums.xml
+++ b/app/src/main/res/layout/layout_albums.xml
@@ -6,6 +6,7 @@
     android:id="@+id/const_layout"
     android:background="@drawable/border"
     android:padding="10dp"
+    android:layout_margin="10dp"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
